--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -147,7 +147,7 @@ jobs:
           cache: false
 
       - name: Export Go full version
-        run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
+        run: echo "GO_FULL_VER=$(go env GOVERSION)" >> "$GITHUB_ENV"
 
       - name: Go cache
         uses: actions/cache@v4
@@ -303,7 +303,7 @@ jobs:
           cache: false
 
       - name: Export Go full version
-        run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
+        run: echo "GO_FULL_VER=$(go env GOVERSION)" >> "$GITHUB_ENV"
 
       - name: Go cache
         uses: actions/cache@v4
@@ -419,7 +419,7 @@ jobs:
           cache: false
 
       - name: Export Go full version
-        run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
+        run: echo "GO_FULL_VER=$(go env GOVERSION)" >> "$GITHUB_ENV"
 
       - name: Go cache
         uses: actions/cache/restore@v4
@@ -475,7 +475,7 @@ jobs:
       - name: Check kube ovn pod restarts
         run: |
           make check-kube-ovn-pod-restarts
-          
+
       - name: kubectl ko log
         if: failure()
         run: |
@@ -583,7 +583,7 @@ jobs:
           cache: false
 
       - name: Export Go full version
-        run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
+        run: echo "GO_FULL_VER=$(go env GOVERSION)" >> "$GITHUB_ENV"
 
       - name: Go cache
         uses: actions/cache/restore@v4
@@ -635,7 +635,7 @@ jobs:
       - name: Check kube ovn pod restarts
         run: |
           make check-kube-ovn-pod-restarts
-          
+
       - name: kubectl ko log
         if: failure()
         run: |
@@ -770,7 +770,7 @@ jobs:
       - name: Check kube ovn pod restarts
         run: |
           make check-kube-ovn-pod-restarts
-          
+
       - name: kubectl ko log
         if: failure()
         run: |
@@ -872,7 +872,7 @@ jobs:
           cache: false
 
       - name: Export Go full version
-        run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
+        run: echo "GO_FULL_VER=$(go env GOVERSION)" >> "$GITHUB_ENV"
 
       - name: Go cache
         uses: actions/cache/restore@v4
@@ -931,7 +931,7 @@ jobs:
       - name: Check kube ovn pod restarts
         run: |
           make check-kube-ovn-pod-restarts
-          
+
       - name: kubectl ko log
         if: failure()
         run: |
@@ -1033,7 +1033,7 @@ jobs:
           cache: false
 
       - name: Export Go full version
-        run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
+        run: echo "GO_FULL_VER=$(go env GOVERSION)" >> "$GITHUB_ENV"
 
       - name: Go cache
         uses: actions/cache/restore@v4
@@ -1085,7 +1085,7 @@ jobs:
       - name: Check kube ovn pod restarts
         run: |
           make check-kube-ovn-pod-restarts
-          
+
       - name: kubectl ko log
         if: failure()
         run: |
@@ -1152,7 +1152,7 @@ jobs:
       - name: Check kube ovn pod restarts
         run: |
           make check-kube-ovn-pod-restarts
-          
+
       - name: Uninstall Kube-OVN
         run: make kind-uninstall-chart
   
@@ -1201,7 +1201,7 @@ jobs:
       - name: Check kube ovn pod restarts
         run: |
           make check-kube-ovn-pod-restarts
-          
+
       - name: Cleanup
         run: sh -x dist/images/cleanup.sh
 
@@ -1252,7 +1252,7 @@ jobs:
       - name: Check kube ovn pod restarts
         run: |
           make check-kube-ovn-pod-restarts
-          
+
       - name: Cleanup
         run: sh -x dist/images/cleanup.sh
 
@@ -1303,7 +1303,7 @@ jobs:
       - name: Check kube ovn pod restarts
         run: |
           make check-kube-ovn-pod-restarts
-          
+
       - name: Cleanup
         run: sh -x dist/images/cleanup.sh
 
@@ -1356,7 +1356,7 @@ jobs:
           cache: false
 
       - name: Export Go full version
-        run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
+        run: echo "GO_FULL_VER=$(go env GOVERSION)" >> "$GITHUB_ENV"
 
       - name: Go cache
         uses: actions/cache/restore@v4
@@ -1460,7 +1460,7 @@ jobs:
           cache: false
 
       - name: Export Go full version
-        run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
+        run: echo "GO_FULL_VER=$(go env GOVERSION)" >> "$GITHUB_ENV"
 
       - name: Go cache
         uses: actions/cache/restore@v4
@@ -1509,7 +1509,7 @@ jobs:
       - name: Check kube ovn pod restarts
         run: |
           make check-kube-ovn-pod-restarts
-          
+
       - name: kubectl ko log
         if: failure()
         run: |
@@ -1568,7 +1568,7 @@ jobs:
       - name: Check kube ovn pod restarts
         run: |
           make check-kube-ovn-pod-restarts
-          
+
       - name: kubectl ko log
         if: failure()
         run: |
@@ -1648,7 +1648,7 @@ jobs:
           cache: false
 
       - name: Export Go full version
-        run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
+        run: echo "GO_FULL_VER=$(go env GOVERSION)" >> "$GITHUB_ENV"
 
       - name: Go cache
         uses: actions/cache/restore@v4
@@ -1698,7 +1698,7 @@ jobs:
       - name: Check kube ovn pod restarts
         run: |
           make check-kube-ovn-pod-restarts
-          
+
       - name: kubectl ko log
         if: failure()
         run: |
@@ -1776,7 +1776,7 @@ jobs:
           cache: false
 
       - name: Export Go full version
-        run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
+        run: echo "GO_FULL_VER=$(go env GOVERSION)" >> "$GITHUB_ENV"
 
       - name: Go cache
         uses: actions/cache/restore@v4
@@ -1831,7 +1831,7 @@ jobs:
       - name: Check kube ovn pod restarts
         run: |
           make check-kube-ovn-pod-restarts
-          
+
       - name: kubectl ko log
         if: failure()
         run: |
@@ -1924,7 +1924,7 @@ jobs:
       - name: Check kube ovn pod restarts
         run: |
           make check-kube-ovn-pod-restarts
-          
+
       - name: kubectl ko log
         if: failure()
         run: |
@@ -1990,7 +1990,7 @@ jobs:
           cache: false
 
       - name: Export Go full version
-        run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
+        run: echo "GO_FULL_VER=$(go env GOVERSION)" >> "$GITHUB_ENV"
 
       - name: Go cache
         uses: actions/cache/restore@v4
@@ -2045,7 +2045,7 @@ jobs:
       - name: Check kube ovn pod restarts
         run: |
           make check-kube-ovn-pod-restarts
-          
+
       - name: kubectl ko log
         if: failure()
         run: |
@@ -2107,7 +2107,7 @@ jobs:
           cache: false
 
       - name: Export Go full version
-        run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
+        run: echo "GO_FULL_VER=$(go env GOVERSION)" >> "$GITHUB_ENV"
 
       - name: Go cache
         uses: actions/cache/restore@v4
@@ -2161,7 +2161,7 @@ jobs:
       - name: Check kube ovn pod restarts
         run: |
           make check-kube-ovn-pod-restarts
-          
+
   push:
     name: Push Images
     needs:
