--- a/Makefile.e2e
+++ b/Makefile.e2e
@@ -37,7 +37,6 @@ endif
 
 ifeq ($(E2E_IP_FAMILY),dual)
 K8S_CONFORMANCE_E2E_FOCUS += "sig-network.*Feature:IPv6DualStack"
-K8S_CONFORMANCE_E2E_SKIP += "sig-network.*should create pod, add ipv6 and ipv4 ip to host ips.*Feature:PodHostIPs"
 endif
 
 ifeq ($(E2E_CILIUM_CHAINING),true)
@@ -83,6 +82,11 @@ e2e-build:
 
 .PHONY: k8s-conformance-e2e
 k8s-conformance-e2e:
+	$(eval K8S_CONFORMANCE_E2E_SKIP += $(shell set -eo pipefail; \
+		version=`kubectl version 2>/dev/null | grep -iw server | grep -woE 'v[0-9]+(\.[0-9]+){2}' | awk '{print} END{print "v1.29.0"}' | sort -V | head -n1`; \
+		if [ $$version != "v1.29.0" -a "$(E2E_IP_FAMILY)" = "dual" ]; then \
+			echo '"sig-network.*should create pod, add ipv6 and ipv4 ip to host ips.*"'; \
+		fi))
 	ginkgo build $(E2E_BUILD_FLAGS) ./test/e2e/k8s-network
 	ginkgo $(GINKGO_OUTPUT_OPT) $(GINKGO_PARALLEL_OPT) --randomize-all -v --timeout=1h \
 		$(call ginkgo_option,focus,$(K8S_CONFORMANCE_E2E_FOCUS)) \
